# career-planner

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  go.mod  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_tools.py
.claude/commands/: implement-command.md  prepare-data.md
cmd/dev/: main.go
cmd/seed/: main.go
cmd/web/: main.go
docs/: blueprint.md  man.md
internal/app/: app.go
internal/applications/: extraction.go  extraction_test.go  job_posting_fetch.go  model.go  repository.go  service.go  service_test.go
internal/communications/: model.go  prompts.go  repository.go  service.go  service_test.go
internal/companies/: candidate.go  model.go  prompts.go  repository.go  service.go  service_test.go
internal/db/: db.go  db_test.go
internal/dossiers/: fallback.go  helpers.go  model.go  prompts.go  repository.go  service.go  service_test.go
internal/engineering_blogs/: model.go  repository.go  service.go  service_test.go
internal/engineeringnotes/: repository.go  service.go
internal/http/: applications_handlers.go  communications_handlers.go  companies_handlers.go  engineering_blogs_handlers.go  home_handlers.go  home_handlers_test.go  middleware.go  people_handlers.go  render.go  router.go  test_handlers.go
internal/jobs/: service.go
internal/llm/: client.go  config.go
internal/people/: model.go  repository.go  service.go  service_test.go
internal/shared/: errors.go  numbers.go  time.go  url_sanitizer.go  (+1 more)
scripts/: README.md  prepare_all.py  prepare_esco.py  prepare_jobhop_matrix.py  prepare_onet_crosswalk.py
tests/: test_brag.py  test_config.py  test_criteria.py  test_gap.py  test_init.py  test_llm.py  test_man.py  test_opportunities.py  test_profile.py  test_resume.py  test_skills.py  test_skills_browse.py  test_status.py  test_tags.py  test_taxonomy.py  test_timeline.py  test_version.py
(+109 files in other folders)
