[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-planner"
version = "0.1.0"
description = "A local-first, CLI-based personal career planning tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Norah Hoang" },
]
keywords = ["career", "planning", "cli", "esco", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = []  # httpx already in core; placeholder for future AI-specific deps
memory = [
    "lancedb>=0.6.0",
]
mcp = [
    "fastmcp>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
all = [
    "career-planner[ai,memory,mcp]",
]

[project.scripts]
career = "career_planner.cli:app"

[project.urls]
Homepage = "https://github.com/career-planner/career-planner"
Documentation = "https://github.com/career-planner/career-planner/blob/main/docs/blueprint.md"
Repository = "https://github.com/career-planner/career-planner"
Issues = "https://github.com/career-planner/career-planner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/career_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
